Revision history for {{$dist->name}}

{{$NEXT}}

0.28      2017-08-22 20:26:12 -0400
  - Production release identical to 0.27_02

0.27_02   2017-08-21 16:55:18 -0400
  - Fix testing bug introduced in 0.27_01

0.27_01   2017-08-20 05:28:25 -0400
  - Works on Windows with a Perl installed in a directory with whitespace
  - Works on Windows when installed from a directory with whitespace

0.26      2017-01-31 19:02:25 -0500
  - Improved escaping on windows (brad++)
  - Added cmd_escape_path function (brad++)
  - Added powershell_escape_path function (brad++)

0.25      2016-05-05 18:43:37 -0400
  - Add support for MSYS

0.24      2015-08-20 12:32:24 -0400
  - Remove dependency on Test::Differences

0.23      2015-08-06 16:16:59 -0400
  - Switch to ExtUtils::MakeMaker since we aren't using any
    customizations in the installer

0.22      2015-06-18 17:57:29 -0400
  - No longer use autodie for generate_file.
    This is to cleanly support Perl 5.8.1
    The exception thrown is now a string exception
    instead of a autodie exception.

0.21      2015-02-21 07:51:16 -0500
  - Skip PS1 tests on ActiveState build

0.20      2015-02-19 18:53:28 -0500
  - Attempt to verify that we can execute Power Shell scripts before
    trying to execute Power Shell scripts in test.

0.19      2015-01-12 08:06:27 -0500
  - Update test suite to skip testing "fish" (not a shell) that
    comes with Perl Power Tools.  Still test fish (when a shell)
    if it is found.

0.18      2015-01-10 18:17:07 -0500
  - do not test against jsh (FreeBSD "job" shell) unless it
    can be determined to really be that shell.

0.17      2014-05-28 20:25:10 -0400
  - add set_path_sep method

0.16      2014-05-28 05:55:04 -0400
  - fix win32_space_be_gone on MSWin32

0.15      2014-05-27 19:44:57 -0400
  - make win32_space_be_gone a little less aggressive
    don't modify long paths (non 8.3) that don't have spaces

0.14      2014-05-27 19:22:19 -0400
  - added win32_space_be_gone function
